# arm4dof_control

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml  sts3215_config.yaml
include/: sts3215_config.hpp  sts3215_design.hpp  sts3215_hardware.hpp  sts3215_port.hpp
include/arm4dof_control/: sts3215_config.hpp  sts3215_design.hpp  sts3215_hardware.hpp  sts3215_joint.hpp  sts3215_port.hpp  sts3215_servo.hpp
launch/: pos_control.launch
src/: main.cpp  sts3215_config.cpp  sts3215_hardware.cpp  sts3215_joint.cpp  sts3215_port.cpp  sts3215_servo.cpp
